Changed some text on the projects/about pages

--- a/projects.html
+++ b/projects.html
@@ -61,9 +61,7 @@
 						<div class="text-justify">
 							<h1>3D Printing in Microgravity</h1>    
 							<p style="padding-top: 10px;" class="projects-text-block">
-								The team designed and built a 3D printer with commericial off-the-shelf products. Given the strict payload requirements 
-								on the size of the printer, no current pre-manufactured 3D printers would have met the criteria for the flight. 
-								Furthermore, the 3D printer had to be structurally and electrically robust enough to survive the launch, reentry and splashdown environments.
+								This past year, the team designed and built a 3D printer with commercial off-the-shelf products and custom manufactured components.  Given the strict payload size and weight requirements, no current commercially available 3D printers would have been within the constraints of the mission.  Furthermore, the 3D printer had to be structurally and electrically robust enough to survive the launch, reentry and splashdown environments.  After recovery of the experiment, the team was able to confirm that their mission was successful in that their custom 3D printer manufactured the Virginia Tech logo in micro-gravity, 150km above the earth.
 							</p>
 						</div>
 					</div>
