--- a/about.html
+++ b/about.html
@@ -52,13 +52,13 @@
 					<div class="col-md-12 center-block"> 
 						<div class="about-text-block">
 							<p style="padding-top: 10px;">
-								The RockSat-X program is an inititiave by the Colorado Space Grant Consortium in conjuction with NASA's Sounding Rocket Program Office (SRPO) to provide low-cost access to space for univerisity design teams. Teams are allotted a modular payload space on a sounding rocket payload which is launched from Wallops Flight Facility in Virginia. The flight allows student payloads to experience approximately three minutes to conduct a wide range of experiments in the space environment.
+								The RockSat-X program is an initiative by the Colorado Space Grant Consortium in conjunction with NASA's Sounding Rocket Program Office (SRPO) to provide low-cost access to space for university student design teams.  Teams are allotted a modular payload space on a sounding rocket which is launched every August from NASA Wallops Flight Facility in Virginia.							
+							</p>
+							<p style="padding-top: 20px;">							
+								The Virginia Tech team has participated in the program for the past 4 years and has successfully completed a variety of experiments.  The team is currently comprised of 15 undergraduate engineering students from a variety of majors: Aerospace Engineering, Mechanical Engineering, Computer Engineering, and Computer Science.  The team’s overarching mission is to demonstrate and advance space-based technology for the benefit of the public.
 							</p>
 							<p style="padding-top: 20px;">
-								The Virginia Tech team has participated in the program for the past four years and has successfully completed a variety of experiments. The team is comprised of approximately 16 undergraduate engineering students from Aerospace, Mechanical and Computer Engineering as well as Computer Science majors at Virginia Tech. These students epitomize the ingenuity of the Virginia Tech College of Engineering by designing and building innovative microgravity experiments. The team mission is to demonstrate and advance space-based technology for the benefit of the public.
-							</p>
-							<p style="padding-top: 20px;">
-								During the 2014-2015 school year, the team independently designed and built a Zero-G additive manufacturing experiment. This was the second-ever demonstration of additive manufacturing in space on the heels of Made in Space's 3D printer demonstration on the International Space Station in 2014. <a href="projects.html">Visit the projects page</a> to learn more about the additive manufacturing experiment. Former projects include a panoramic virtual reality experiment and an atmospheric sensing experiment.
+								During the 2014-2015 school year, the team independently designed and built a Zero-G additive manufacturing experiment.  This was the second-ever demonstration of additive manufacturing in space on the heels of Made in Space's 3D printer demonstration on the International Space Station in 2014.  Please visit our projects page to learn more about the additive manufacturing experiment.  Other former projects include a panoramic virtual reality experiment and an atmospheric sensing experiment.
 							</p>
 						</div>
 					</div>
