--- a/members.html
+++ b/members.html
@@ -35,7 +35,7 @@
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav pull-right">
 						<li><a href="about.html"><span class="glyphicon glyphicon-info-sign navbar-padding-right"></span>About</a></li>
-						<li><a href="projects.html"><span class="glyphicon glyphicon-th-large navbar-padding-right"></span>2016</a></li>
+						<li><a href="2016.html"><span class="glyphicon glyphicon-th-large navbar-padding-right"></span>2016</a></li>
 						<li class="active"><a href="members.html"><span class="glyphicon glyphicon-user navbar-padding-right"></span>Members</a></li>
 						<li><a href="#contact" data-toggle="modal"><span class="glyphicon glyphicon-envelope navbar-padding-right"></span>Contact</a></li>
 					</ul>
