--- a/2017.html
+++ b/2017.html
@@ -53,7 +53,7 @@
 			<div class="overlay">
 				<div class="container">
 				  <div class="jumbo-text">
-					<h1>RockSat-X 2016</h1>
+					<h1>RockSat-X 2015</h1>
 				  </div>
 				</div>
 			</div>
@@ -63,13 +63,13 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6">
-						<img src="images/rocksat-2016/payload_2016_2.jpg" class="img-rounded img-responsive center-block" style="max-width: 300px;"/>
+						<img src="images/printer_logo.jpg" class="img-rounded img-responsive center-block" style="max-width: 300px;"/>
 					</div>
 					<div class="col-md-6 center-block" style="padding-top: 30px;"> 
 						<div class="text-justify">
-							<h1>Software Defined Radio</h1>    
+							<h1>3D Printing in Microgravity</h1>    
 							<p style="padding-top: 10px;" class="projects-text-block">
-								Content
+								This past year, the team designed and built a 3D printer with commercial off-the-shelf products and custom manufactured components.  Given the strict payload size and weight requirements, no current commercially available 3D printers would have been within the constraints of the mission.  Furthermore, the 3D printer had to be structurally and electrically robust enough to survive the launch, reentry and splashdown environments.  After recovery of the experiment, the team was able to confirm that their mission was successful in that their custom 3D printer manufactured the Virginia Tech logo in micro-gravity, 150km above the earth.
 							</p>
 						</div>
 					</div>
@@ -82,10 +82,10 @@
 					<h2 class="text-center" style="padding-top: 10px; padding-bottom: 10px;">Payload Pictures</h2>
 					<div class="row">
 						<div class="col-sm-6" style="padding-top: 20px;">
-							<img class="center-block img-thumbnail img-payload" src="images/rocksat-2016/payload_2016_1.jpg">
+							<img class="center-block img-thumbnail img-payload" src="images/rocksat-2015/printer_side_close.jpg">
 						</div>
 						<div class="col-sm-6" style="padding-top: 20px;">
-							<img class="center-block img-thumbnail img-payload" src="images/rocksat-2016/payload_deployed.jpg">
+							<img class="center-block img-thumbnail img-payload" src="images/rocksat-2015/printer_rail.jpg">
 						</div>
 					</div>
 				</div>
@@ -105,42 +105,42 @@
 							</tr>
 							<tr>
 								<td><b>Weight</b></td>
-								<td>stuff</td>
+								<td>30.40</td>
 								<td>Pounds</td>
 							</tr>
 							<tr>
 								<td><b>Height</b></td>
-								<td>stuff</td>
+								<td>10.75</td>
 								<td>Inches</td>
 							</tr>
 							<tr>
 								<td><b>Radius</b></td>
-								<td>stuff</td>
+								<td>10.625</td>
 								<td>Inches</td>
 							</tr>
 							<tr>
 								<td><b>Power</b></td>
-								<td>stuff</td>
+								<td>91.0</td>
 								<td>Watts</td>
 							</tr>
 							<tr>
 								<td><b>Current</b></td>
-								<td>stuff</td>
+								<td>2.42</td>
 								<td>Amps</td>
 							</tr>
 							<tr>
 								<td><b>Voltage</b></td>
-								<td>stuff</td>
+								<td>+28.0</td>
 								<td>Volts</td>
 							</tr>
 							<tr>
 								<td><b>Flight Cost</b></td>
-								<td>stuff</td>
+								<td>24000.00</td>
 								<td>U.S. Dollars</td>
 							</tr>
 							<tr>
 								<td><b>Printer Cost</b></td>
-								<td>stuff</td>
+								<td>2932.44</td>
 								<td>U.S. Dollars</td>
 							</tr>
 						</table>
@@ -152,14 +152,13 @@
 				<h2 class="text-center" style="padding-top: 10px; padding-bottom: 10px;">Flight Data</h2>
 				<div class="row center-block">
 					<div style="padding-top: 20px;">
-						<img class="center-block img-thumbnail img-payload" src="TODO">
+						<img class="center-block img-thumbnail img-payload" src="images/rocksat-2015/exp3_tm.png">
 					</div>
 					<div style="padding-top: 20px;">
-						<img class="center-block img-thumbnail img-payload" src="TODO">
+						<img class="center-block img-thumbnail img-payload" src="images/rocksat-2015/accel_data.jpg">
 					</div>
 				</div>
 			</div>
-			<!--
 			<hr class="hr-body"/>
 			<div class="row layered-projects">
 				<div class="container">
@@ -174,10 +173,12 @@
 						<p>Image of the VT logo that the printer manufactured in space while in microgravity</p>
 					</div>
 				</div>
-			</div> -->
+			</div>
+
 		</div>
 
-		<div class="jumbotron jumbotron-2016"></div>
+		<div class="jumbotron jumbotron-2015"></div>
+				
 		
 		<div class="modal fade" id="contact" role="dialog">
 			<div class="modal-dialog">
