--- a/about.html
+++ b/about.html
@@ -35,8 +35,16 @@
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav pull-right">
 						<li class="active"><a href="about.html"><span class="glyphicon glyphicon-info-sign navbar-padding-right"></span>About</a></li>
-						<li><a href="projects.html"><span class="glyphicon glyphicon-th-large navbar-padding-right"></span>2016</a></li>
-						<li><a href="members.html"><span class="glyphicon glyphicon-user navbar-padding-right"></span>Members</a></li>
+						<li class="dropdown">
+        					<a class="dropdown-toggle" data-toggle="dropdown" href="#">Projects
+        					<span class="caret"></span></a>
+        					<ul class="dropdown-menu">
+          						<li><a href="2014.html">2014</a></li>
+          						<li><a href="2015.html">2015</a></li>
+          						<li><a href="2016.html">2016</a></li>
+          						<li><a href="2017.html">2017</a></li>
+        					</ul>
+      					</li>
 						<li><a href="#contact" data-toggle="modal"><span class="glyphicon glyphicon-envelope navbar-padding-right"></span>Contact</a></li>
 					</ul>
 				</div>
