--- a/2016.html
+++ b/2016.html
@@ -69,7 +69,7 @@
 						<div class="text-justify">
 							<h1>Software Defined Radio</h1>    
 							<p style="padding-top: 10px;" class="projects-text-block">
-								Content
+								The goal of this mission is to demonstrate the capability of software defined radio (SDR) in space communication applications by transmitting between the RockSat-X sounding rocket and the Virginia Tech Ground Station (VTGS) in Blacksburg, VA. The packets transmitted contain gyroscopic, acceleration, pressure, and temperature data collected aboard the payload. This mission is a proof of concept for low-cost and highly flexible transceivers for spacecraft.
 							</p>
 						</div>
 					</div>
@@ -96,7 +96,7 @@
 				<div class="container">
 					<h2 class="text-center" style="padding-bottom: 30px;">Mission Specifications</h2>
 					<div class="panel panel-primary spec-table img-center">
-					<div class="panel-heading">Payload and Mission Specifications</div>
+					<div class="panel-heading">Mission Specifications</div>
 						<table class="table">
 							<tr>
 								<td><b>Spec.</b></td>
@@ -105,43 +105,69 @@
 							</tr>
 							<tr>
 								<td><b>Weight</b></td>
-								<td>stuff</td>
+								<td>15</td>
 								<td>Pounds</td>
 							</tr>
 							<tr>
-								<td><b>Height</b></td>
-								<td>stuff</td>
-								<td>Inches</td>
-							</tr>
-							<tr>
-								<td><b>Radius</b></td>
-								<td>stuff</td>
-								<td>Inches</td>
-							</tr>
-							<tr>
 								<td><b>Power</b></td>
-								<td>stuff</td>
+								<td>14.5</td>
 								<td>Watts</td>
 							</tr>
 							<tr>
-								<td><b>Current</b></td>
-								<td>stuff</td>
-								<td>Amps</td>
-							</tr>
-							<tr>
-								<td><b>Voltage</b></td>
-								<td>stuff</td>
-								<td>Volts</td>
-							</tr>
-							<tr>
 								<td><b>Flight Cost</b></td>
-								<td>stuff</td>
+								<td>20,350</td>
 								<td>U.S. Dollars</td>
 							</tr>
 							<tr>
-								<td><b>Printer Cost</b></td>
-								<td>stuff</td>
-								<td>U.S. Dollars</td>
+								<td><b>Altitude</b></td>
+								<td>150</td>
+								<td>kilometers</td>
+							</tr>
+							<tr>
+								<td><b>Transmission Window</b></td>
+								<td>160</td>
+								<td>Seconds</td>
+							</tr>
+						</table>
+					</div>
+					<h2 class="text-center" style="padding-bottom: 30px;">Link Specifications</h2>
+					<div class="panel panel-primary spec-table img-center">
+					<div class="panel-heading">Link Specifications</div>
+						<table class="table">
+							<tr>
+								<td><b>Spec.</b></td>
+								<td><b>Value</b></td>
+								<td><b>Unit</b></td>
+							</tr>
+							<tr>
+								<td><b>Modulation Type</b></td>
+								<td>BPSK</td>
+								<td></td>
+							</tr>
+							<tr>
+								<td><b>Center Frequency</b></td>
+								<td>2395</td>
+								<td>MHz</td>
+							</tr>
+							<tr>
+								<td><b>Frequency Bandwidth</b></td>
+								<td>187.5</td>
+								<td>kHz</td>
+							</tr>
+							<tr>
+								<td><b>Bit Rate</b></td>
+								<td>125</td>
+								<td>kbps</td>
+							</tr>
+							<tr>
+								<td><b>Average Power</b></td>
+								<td>10</td>
+								<td>dBm</td>
+							</tr>
+							<tr>
+								<td><b>Maximum Power</b></td>
+								<td>12</td>
+								<td>dBm</td>
 							</tr>
 						</table>
 					</div>
@@ -152,29 +178,22 @@
 				<h2 class="text-center" style="padding-top: 10px; padding-bottom: 10px;">Flight Data</h2>
 				<div class="row center-block">
 					<div style="padding-top: 20px;">
-						<img class="center-block img-thumbnail img-payload" src="TODO">
+						<img class="center-block img-thumbnail img-payload" src="images/rocksat-2016/flight_events.jpg">
 					</div>
 					<div style="padding-top: 20px;">
-						<img class="center-block img-thumbnail img-payload" src="TODO">
+						<img class="center-block img-thumbnail img-payload" src="images/rocksat-2016/acceleration_data.jpg">
+					</div>
+					<div style="padding-top: 20px;">
+						<img class="center-block img-thumbnail img-payload" src="images/rocksat-2016/gyroscope.jpg">
+					</div>
+					<div style="padding-top: 20px;">
+						<img class="center-block img-thumbnail img-payload" src="images/rocksat-2016/temperature.jpg">
+					</div>
+					<div style="padding-top: 20px;">
+						<img class="center-block img-thumbnail img-payload" src="images/rocksat-2016/pressure.jpg">
 					</div>
 				</div>
 			</div>
-			<!--
-			<hr class="hr-body"/>
-			<div class="row layered-projects">
-				<div class="container">
-					<div class="col-sm-6 text-center">
-						<img class="img-rocksat-logos" src="images/rocksat-2015/before.jpg">
-						<h2>Before</h2>
-						<p>Image of one of the VT logos that the printer manufactured prior to launch</p>
-					</div>
-					<div class="col-sm-6 text-center">
-						<img class="img-rocksat-logos" src="images/rocksat-2015/after.jpg">
-						<h2>After</h2>
-						<p>Image of the VT logo that the printer manufactured in space while in microgravity</p>
-					</div>
-				</div>
-			</div> -->
 		</div>
 
 		<div class="jumbotron jumbotron-2016"></div>
