updated members page - still need photos

--- a/2017.html
+++ b/2017.html
@@ -44,6 +44,7 @@
           						<li><a href="2017.html">2017</a></li>
         					</ul>
       					</li>
+      					<li class="active"><a href="members.html"><span class="glyphicon glyphicon-info-sign navbar-padding-right"></span>Members</a></li>
 						<li><a href="#contact" data-toggle="modal"><span class="glyphicon glyphicon-envelope navbar-padding-right"></span>Contact</a></li>
 					</ul>
 				</div>
@@ -53,7 +54,7 @@
 			<div class="overlay">
 				<div class="container">
 				  <div class="jumbo-text">
-					<h1>RockSat-X 2015</h1>
+					<h1>RockSat-X 2017</h1>
 				  </div>
 				</div>
 			</div>
