--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
           						<li><a href="2017.html">2017</a></li>
         					</ul>
       					</li>
+      					<li class="active"><a href="members.html"><span class="glyphicon glyphicon-info-sign navbar-padding-right"></span>Members</a></li>
 						<li><a href="#contact" data-toggle="modal"><span class="glyphicon glyphicon-envelope navbar-padding-right"></span>Contact</a></li>
 					</ul>
 				</div>
