added 2014 page, and pictures, deployable site

--- a/2014.html
+++ b/2014.html
@@ -41,10 +41,10 @@
           						<li><a href="2014.html">2014</a></li>
           						<li><a href="2015.html">2015</a></li>
           						<li><a href="2016.html">2016</a></li>
-          						<li><a href="2017.html">2017</a></li>
+          						<!--<li><a href="2017.html">2017</a></li>-->
         					</ul>
       					</li>
-      					<li class="active"><a href="members.html"><span class="glyphicon glyphicon-info-sign navbar-padding-right"></span>Members</a></li>
+      					<li class="active"><a href="members.html"><span class="glyphicon glyphicon-user navbar-padding-right"></span>Current Members</a></li>
 						<li><a href="#contact" data-toggle="modal"><span class="glyphicon glyphicon-envelope navbar-padding-right"></span>Contact</a></li>
 					</ul>
 				</div>
@@ -54,7 +54,7 @@
 			<div class="overlay">
 				<div class="container">
 				  <div class="jumbo-text">
-					<h1>RockSat-X 2015</h1>
+					<h1>RockSat-X 2014</h1>
 				  </div>
 				</div>
 			</div>
@@ -64,13 +64,13 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6">
-						<img src="images/printer_logo.jpg" class="img-rounded img-responsive center-block" style="max-width: 300px;"/>
+						<img src="images/rocksat-2014/fullpayload.jpg" class="img-rounded img-responsive center-block" style="max-width: 300px;"/>
 					</div>
 					<div class="col-md-6 center-block" style="padding-top: 30px;"> 
-						<div class="text-justify">
-							<h1>3D Printing in Microgravity</h1>    
+						<div class="text-indented">
+							<h1>Modified Aperture cover and Virtual Reality EXperiment (MAVREX)</h1>    
 							<p style="padding-top: 10px;" class="projects-text-block">
-								This past year, the team designed and built a 3D printer with commercial off-the-shelf products and custom manufactured components.  Given the strict payload size and weight requirements, no current commercially available 3D printers would have been within the constraints of the mission.  Furthermore, the 3D printer had to be structurally and electrically robust enough to survive the launch, reentry and splashdown environments.  After recovery of the experiment, the team was able to confirm that their mission was successful in that their custom 3D printer manufactured the Virginia Tech logo in micro-gravity, 150km above the earth.
+								The payload consists of 3 experiments. One is to test deployment of the Space Pressure Sensor (SPS) Aperture Cover Release Mechanism (SPS ACRM) (PI: Dr. Gregory Earle). The second payload utilized an Optical Nitric Oxide Sensor (ONS) for NO concentration data collection at high altitudes (PI: Dr. Scott Bailey). The third payload records panoramic video of flight for virtual reality simulation (in partnership with A.I. Solutions, Inc.). 
 							</p>
 						</div>
 					</div>
@@ -83,10 +83,18 @@
 					<h2 class="text-center" style="padding-top: 10px; padding-bottom: 10px;">Payload Pictures</h2>
 					<div class="row">
 						<div class="col-sm-6" style="padding-top: 20px;">
-							<img class="center-block img-thumbnail img-payload" src="images/rocksat-2015/printer_side_close.jpg">
+							<img class="center-block img-thumbnail img-payload" src="images/rocksat-2014/nosensor.jpg">
 						</div>
 						<div class="col-sm-6" style="padding-top: 20px;">
-							<img class="center-block img-thumbnail img-payload" src="images/rocksat-2015/printer_rail.jpg">
+							<img class="center-block img-thumbnail img-payload" src="images/rocksat-2014/acrm.jpg">
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-sm-6" style="padding-top: 20px;">
+							<img class="center-block img-thumbnail img-payload" src="images/rocksat-2014/gopro.jpg">
+						</div>
+						<div class="col-sm-6" style="padding-top: 20px;">
+							<img class="center-block img-thumbnail img-payload" src="images/rocksat-2014/cadpayload.jpg">
 						</div>
 					</div>
 				</div>
@@ -106,13 +114,8 @@
 							</tr>
 							<tr>
 								<td><b>Weight</b></td>
-								<td>30.40</td>
+								<td>30.00</td>
 								<td>Pounds</td>
-							</tr>
-							<tr>
-								<td><b>Height</b></td>
-								<td>10.75</td>
-								<td>Inches</td>
 							</tr>
 							<tr>
 								<td><b>Radius</b></td>
@@ -121,12 +124,12 @@
 							</tr>
 							<tr>
 								<td><b>Power</b></td>
-								<td>91.0</td>
+								<td>8.80</td>
 								<td>Watts</td>
 							</tr>
 							<tr>
 								<td><b>Current</b></td>
-								<td>2.42</td>
+								<td>0.85</td>
 								<td>Amps</td>
 							</tr>
 							<tr>
@@ -136,49 +139,15 @@
 							</tr>
 							<tr>
 								<td><b>Flight Cost</b></td>
-								<td>24000.00</td>
-								<td>U.S. Dollars</td>
-							</tr>
-							<tr>
-								<td><b>Printer Cost</b></td>
-								<td>2932.44</td>
+								<td>27,500</td>
 								<td>U.S. Dollars</td>
 							</tr>
 						</table>
 					</div>
 				</div>
 			</div>
-			<hr class="hr-body"/>
-			<div class="container">
-				<h2 class="text-center" style="padding-top: 10px; padding-bottom: 10px;">Flight Data</h2>
-				<div class="row center-block">
-					<div style="padding-top: 20px;">
-						<img class="center-block img-thumbnail img-payload" src="images/rocksat-2015/exp3_tm.png">
-					</div>
-					<div style="padding-top: 20px;">
-						<img class="center-block img-thumbnail img-payload" src="images/rocksat-2015/accel_data.jpg">
-					</div>
-				</div>
-			</div>
-			<hr class="hr-body"/>
-			<div class="row layered-projects">
-				<div class="container">
-					<div class="col-sm-6 text-center">
-						<img class="img-rocksat-logos" src="images/rocksat-2015/before.jpg">
-						<h2>Before</h2>
-						<p>Image of one of the VT logos that the printer manufactured prior to launch</p>
-					</div>
-					<div class="col-sm-6 text-center">
-						<img class="img-rocksat-logos" src="images/rocksat-2015/after.jpg">
-						<h2>After</h2>
-						<p>Image of the VT logo that the printer manufactured in space while in microgravity</p>
-					</div>
-				</div>
-			</div>
 
-		</div>
-
-		<div class="jumbotron jumbotron-2015"></div>
+		<div class="jumbotron jumbotron-2014"></div>
 				
 		
 		<div class="modal fade" id="contact" role="dialog">
