--- a/2015.html
+++ b/2015.html
@@ -41,10 +41,10 @@
           						<li><a href="2014.html">2014</a></li>
           						<li><a href="2015.html">2015</a></li>
           						<li><a href="2016.html">2016</a></li>
-          						<li><a href="2017.html">2017</a></li>
+          						<!--<li><a href="2017.html">2017</a></li>-->
         					</ul>
       					</li>
-      					<li class="active"><a href="members.html"><span class="glyphicon glyphicon-info-sign navbar-padding-right"></span>Members</a></li>
+      					<li class="active"><a href="members.html"><span class="glyphicon glyphicon-user navbar-padding-right"></span>Current Members</a></li>
 						<li><a href="#contact" data-toggle="modal"><span class="glyphicon glyphicon-envelope navbar-padding-right"></span>Contact</a></li>
 					</ul>
 				</div>
@@ -70,7 +70,7 @@
 						<div class="text-justify">
 							<h1>3D Printing in Microgravity</h1>    
 							<p style="padding-top: 10px;" class="projects-text-block">
-								This past year, the team designed and built a 3D printer with commercial off-the-shelf products and custom manufactured components.  Given the strict payload size and weight requirements, no current commercially available 3D printers would have been within the constraints of the mission.  Furthermore, the 3D printer had to be structurally and electrically robust enough to survive the launch, reentry and splashdown environments.  After recovery of the experiment, the team was able to confirm that their mission was successful in that their custom 3D printer manufactured the Virginia Tech logo in micro-gravity, 150km above the earth.
+								The team designed and built a 3D printer with commercial off-the-shelf products and custom manufactured components.  Given the strict payload size and weight requirements, no current commercially available 3D printers would have been within the constraints of the mission.  Furthermore, the 3D printer had to be structurally and electrically robust enough to survive the launch, reentry and splashdown environments.  After recovery of the experiment, the team was able to confirm that their mission was successful in that their custom 3D printer manufactured the Virginia Tech logo in micro-gravity, 150km above the earth.
 							</p>
 						</div>
 					</div>
