--- a/2016.html
+++ b/2016.html
@@ -41,10 +41,10 @@
           						<li><a href="2014.html">2014</a></li>
           						<li><a href="2015.html">2015</a></li>
           						<li><a href="2016.html">2016</a></li>
-          						<li><a href="2017.html">2017</a></li>
+          						<!--<li><a href="2017.html">2017</a></li>-->
         					</ul>
       					</li>
-      					<li class="active"><a href="members.html"><span class="glyphicon glyphicon-info-sign navbar-padding-right"></span>Members</a></li>
+      					<li class="active"><a href="members.html"><span class="glyphicon glyphicon-user navbar-padding-right"></span>Current Members</a></li>
 						<li><a href="#contact" data-toggle="modal"><span class="glyphicon glyphicon-envelope navbar-padding-right"></span>Contact</a></li>
 					</ul>
 				</div>
