--- a/members.html
+++ b/members.html
@@ -42,10 +42,10 @@
           						<li><a href="2014.html">2014</a></li>
           						<li><a href="2015.html">2015</a></li>
           						<li><a href="2016.html">2016</a></li>
-          						<li><a href="2017.html">2017</a></li>
+          						<!--<li><a href="2017.html">2017</a></li>-->
         					</ul>
       					</li>
-      					<li class="active"><a href="members.html"><span class="glyphicon glyphicon-info-sign navbar-padding-right"></span>Members</a></li>
+      					<li class="active"><a href="members.html"><span class="glyphicon glyphicon-user navbar-padding-right"></span>Current Members</a></li>
 						<li><a href="#contact" data-toggle="modal"><span class="glyphicon glyphicon-envelope navbar-padding-right"></span>Contact</a></li>
 					</ul>
 				</div>
@@ -147,6 +147,13 @@
 					</div>
 
 					<div class="col-sm-6 col-md-4 col-lg-3">
+						<div class="img-rounded members-thumbnail member-karl"></div>
+						<p class="members-name"><b>Karl Vitale</b></p>
+						<p class="members-info">Senior</p>
+						<p class="members-info">Engineering Science & Mechanics</p>
+					</div>
+					
+					<div class="col-sm-6 col-md-4 col-lg-3">
 						<div class="img-rounded members-thumbnail member-sagar"></div>
 						<p class="members-name"><b>Sagar Govani</b></p>
 						<p class="members-info">Junior</p>
@@ -160,13 +167,6 @@
 						<p class="members-info">Junior</p>
 						<p class="members-info">Mechanical Engineering</p>
 					</div> -->
-
-					<div class="col-sm-6 col-md-4 col-lg-3">
-						<div class="img-rounded members-thumbnail member-karl"></div>
-						<p class="members-name"><b>Karl Vitale</b></p>
-						<p class="members-info">Senior</p>
-						<p class="members-info">Engineering Science & Mechanics</p>
-					</div>
 
 					<div class="col-sm-6 col-md-4 col-lg-3">
 						<div class="img-rounded members-thumbnail member-austin"></div>
