--- a/about.html
+++ b/about.html
@@ -42,10 +42,10 @@
           						<li><a href="2014.html">2014</a></li>
           						<li><a href="2015.html">2015</a></li>
           						<li><a href="2016.html">2016</a></li>
-          						<li><a href="2017.html">2017</a></li>
+          						<!--<li><a href="2017.html">2017</a></li>-->
         					</ul>
       					</li>
-      					<li class="active"><a href="members.html"><span class="glyphicon glyphicon-info-sign navbar-padding-right"></span>Members</a></li>
+      					<li class="active"><a href="members.html"><span class="glyphicon glyphicon-user navbar-padding-right"></span>Current Members</a></li>
 						<li><a href="#contact" data-toggle="modal"><span class="glyphicon glyphicon-envelope navbar-padding-right"></span>Contact</a></li>
 					</ul>
 				</div>
@@ -65,9 +65,6 @@
 							</p>
 							<p style="padding-top: 20px;">							
 								The Virginia Tech team has participated in the program for the past 4 years and has successfully completed a variety of experiments.  The team is currently comprised of 15 undergraduate engineering students from a variety of majors: Aerospace Engineering, Mechanical Engineering, Computer Engineering, and Computer Science.  The team’s overarching mission is to demonstrate and advance space-based technology for the benefit of the public.
-							</p>
-							<p style="padding-top: 20px;">
-								During the 2014-2015 school year, the team independently designed and built a Zero-G additive manufacturing experiment.  This was the second-ever demonstration of additive manufacturing in space on the heels of Made in Space's 3D printer demonstration on the International Space Station in 2014.  Please visit our projects page to learn more about the additive manufacturing experiment.  Other former projects include a panoramic virtual reality experiment and an atmospheric sensing experiment.
 							</p>
 						</div>
 					</div>
