--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 				</div>
 			</div>
 			
-			<p class="index-content-3-btn"><a class="btn btn-index center-block"  style="max-width: 150px" href="members.html" role="button">Check them out!</a></p>
+			<p class="index-content-3-btn"><a class="btn btn-index center-block"  style="max-width: 150px" href="members.html" role="button">Meet our team!</a></p>
 		</div>
 		
 		<div class="modal fade" id="contact" role="dialog">
